feat: giveList 페이징 처리, 나눔완료 메서드 변경

--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -119,7 +119,7 @@
                                 <div class="input-group">
                                     <div class="input-group-text">이름</div>
                                     <input type="text" class="form-control" id="username" name="name" maxlength="10"
-                                           placeholder="name">
+                                           placeholder="이름">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -127,7 +127,7 @@
                                 <div class="input-group">
                                     <div class="input-group-text">전화번호</div>
                                     <input type="tel" pattern="\d{11,11}" class="form-control col-md-6" id="phone" name="phone"
-                                           placeholder="010-0000-0000 ('-' 없이 입력)" minlength="11" maxlength="11">
+                                           placeholder="01012345678 ('-' 없이 입력)" minlength="11" maxlength="11">
                                 </div>
                             </div>
                         </div>
