--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorate="~{/layout/defaultLayout}"
+layout:fragment="content">
 <head>
     <title>Add Board</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/App.css">
 
     <style>
         hr {
@@ -31,18 +30,12 @@
 
 
 <body>
-<!-- header -->
-<header th:replace="~{/header/header :: headerFragment}"></header>
-<div class="container-fluid">
-    <div class="row">
-        <!-- Sidebar -->
-        <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
 
-        <!-- main 나눔글 작성하기-->
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
-            <div class="main-container border rounded p-3 mt-2"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
+<!-- main 나눔글 작성하기-->
+    <main role="main" class="ml-sm-auto px-md-4" style="height: auto; min-height: 100%; margin-bottom: 50px; display: flex; flex-direction: column;">
+        <div class="main-container border rounded p-3 mt-2" style="flex: 1;"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
 
-                <h2 class="titles mb-3 mt-4 text-center">DONATION</h2>
+        <h2 class="titles mb-3 mt-4 text-center">DONATION</h2>
                 <hr> <!--구분선 넣기 -->
                 <!-- 검색창 -->
                 <form action="/board/bookSearch" method="get" id="search">
@@ -256,8 +249,8 @@
                 </form>
             </div>
         </main>
-    </div>
-</div>
+<!--    </div>-->
+<!--</div>-->
 
 <!-- 모달 창 -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -276,7 +269,6 @@
     </div>
 </div>
 
-<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
 <script th:src="@{/js/boardAdd.js}"></script>
 
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
