--- a/src/main/resources/templates/content/mypage/myInfor.html
+++ b/src/main/resources/templates/content/mypage/myInfor.html
@@ -44,6 +44,7 @@
                             <p class="card-text"><strong>핸드폰 번호:</strong> <span th:text="${user.getPhone()}"></span></p>
                             <p class="card-text"><strong>닉네임:</strong> <span th:text="${user.nickName}"></span></p>
                             <p class="card-text"><strong>주소:</strong> <span th:text="${user.detailAddress}"></span></p>
+                            <p class="card-text"><strong>총 책갈피:</strong> <span th:text="${user.totalPoint}"></span></p>
                         </div>
                     </div>
                 </div>
