--- a/src/main/resources/templates/content/board/boardDetail.html
+++ b/src/main/resources/templates/content/board/boardDetail.html
@@ -45,7 +45,7 @@
             display: none;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+
         }
 
         .prev, .next {
@@ -104,10 +104,12 @@
                 </div>
             </div>
 
-            <div class="d-flex justify-content-center mt-4">
-                <a th:href="@{/board/detail/{bookId}/taker(bookId=${book.booksId})}">
-                    <button class="custom-button btn btn-primary btn-lg btn-block" style="white-space: nowrap; width: 100%;">나눔 받기</button>
-                </a>
+            <div class="d-flex justify-content-center mt-4" th:if="${book.transactions.giverId != user.usersId}">
+                <button class="custom-button btn btn-primary btn-lg btn-block"
+                        style="white-space: nowrap; width: 100%;"
+                        th:onclick="|return checkAndAlert(${book.booksId}, ${user.totalPoint})|">
+                    나눔 받기
+                </button>
             </div>
 
             <div class="card-body" style="padding-top: 50px; padding-bottom: 50px;">
@@ -150,6 +152,17 @@
             slides[i].style.height = "350px";
         }
         slides[slideIndex - 1].style.display = "block";
+    }
+
+    function checkAndAlert(bookId, totalPoint) {
+        if (totalPoint < 5) {
+            alert("포인트가 부족합니다!");
+            return false;
+        } else {
+            // 5 이상인경우 나눔받기 페이지로 이동
+            window.location.href = "/board/detail/" + bookId + "/taker";
+            return true;
+        }
     }
 </script>
 
