--- a/src/main/resources/templates/content/board/updateComplete.html
+++ b/src/main/resources/templates/content/board/updateComplete.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/defaultLayout}"
+      layout:fragment="content">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>나눔글 관리</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/App.css">
 </head>
 <body>
-<header th:replace="~{/header/header :: headerFragment}"></header>
-
-<div class="container-fluid">
-    <div class="row">
-        <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
-
-        <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+    <!-- Main -->
+    <main role="main" class="ml-sm-auto px-md-4" style="height: auto; min-height: 100%; margin-bottom: 50px; display: flex; flex-direction: column;">
+        <div class="main-container border rounded p-3 mt-2" style="flex: 1;"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
             <div class="mt-3">
                 <h3>게시글 수정 완료</h3>
                 <p>수정이 완료된 게시글의 ID: <strong th:text="${boardId}"></strong></p>
@@ -24,10 +21,9 @@
                 <a href="/user/mypage/givelist" class="btn btn-primary">기부 목록으로 돌아가기</a>
                 <a th:href="@{'/board/detail/' + ${boardId}}" class="btn btn-success">나눔글 자세히 보기</a>
             </div>
+        </div>
         </main>
     </div>
 </div>
-
-<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
 </body>
 </html>
