--- a/src/main/resources/templates/content/mypage/giveList.html
+++ b/src/main/resources/templates/content/mypage/giveList.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/defaultLayout}"
+      layout:fragment="content">
 <head>
     <title>My Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/App.css">
     <style>
         hr {
             border: 2px solid #E2ECE2;
@@ -52,14 +54,9 @@
     </style>
 </head>
 <body>
-<header th:replace="~{/header/header :: headerFragment}"></header>
-<div class="container-fluid">
-    <div class="row">
-        <!-- Sidebar -->
-        <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px" >
-            <br>
+<main role="main" class="ml-sm-auto px-md-4" style="height: auto; min-height: 100%; margin-bottom: 50px; display: flex; flex-direction: column;">
+    <div class="main-container border rounded p-3 mt-2" style="flex: 1;"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
             <h2 class="titles text-center">Give List</h2>
             <hr>
             <div class="row" th:each="board : ${boards}">
@@ -122,14 +119,12 @@
                     </li>
                 </ul>
             </nav>
-
+    </div>
         </main>
     </div>
 </div>
-<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
 </body>
 </html>
-<script th:src="@{/js/board.js}"></script>
 
 
 
