--- a/src/main/resources/templates/content/board/takeBook.html
+++ b/src/main/resources/templates/content/board/takeBook.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layout/defaultLayout}"
+      layout:fragment="content">
+
 <head>
     <title>takeBook</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/App.css">
 
     <style>
         hr {
@@ -25,16 +28,9 @@
 </head>
 
 <body>
-<header th:replace="~{/header/header :: headerFragment}"></header>
-
-<div class="container-fluid">
-    <div class="row">
-        <!-- Sidebar -->
-        <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
-
-        <!-- Main -->
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 40px;">
-            <br>
+ <!-- Main -->
+        <main role="main" class="ml-sm-auto px-md-4" style="height: auto; min-height: 100%; margin-bottom: 50px; display: flex; flex-direction: column;">
+            <div class="main-container border rounded p-3 mt-2" style="flex: 1;"> <!-- 메인컨텐츠 주변 보더라인 잡기-->            <br>
             <h3 style="font-weight: bold;">주문 도서 정보</h3>
             <hr>
 
@@ -98,7 +94,7 @@
                     <button type="submit" class="custom-button btn btn-primary" style="width: auto;">나눔 받기</button>
                 </div>
             </form>
-
+            </div>
         </main>
     </div>
 </div>
