--- a/src/main/resources/templates/layout/layoutConfig.html
+++ b/src/main/resources/templates/layout/layoutConfig.html
@@ -8,6 +8,7 @@
 <!-- common JS -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script th:src="@{/js/App.js}"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
