--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <title>로그인</title>
+    <link rel="stylesheet" type="text/css" href="/css/App.css">
+    <script th:src="@{/js/App.js}"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body class="gradient-custom" style="background-color: #E2ECE2;">
 
 <header class="sticky-top" th:replace="~{/header/header :: headerFragment}"></header>
-<hr>
+
 
 <div class="container-fluid">
     <div class="row">
@@ -62,7 +66,6 @@
 </div>
 
 <footer th:replace="~{/footer/footer :: footerFragment}"></footer>
-
 
 <!-- Thymeleaf를 사용하는 경우 아래와 같이 에러 메시지를 표시 -->
 </body>
