--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -15,7 +15,12 @@
 <div id="content-wrapper" style="display: flex;">
     <div id="sidebar" class="sidebar col-md-3 col-lg-2 d-md-block">
         <!-- Sidebar -->
-        <th:block th:replace="~{/sidebar/sidebar :: sidebarFragment}"></th:block>
+        <div th:if="${#httpServletRequest.requestURI.startsWith('/admin')}">
+            <th:block th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></th:block>
+        </div>
+        <div th:unless="${#httpServletRequest.requestURI.startsWith('/admin')}">
+            <th:block th:replace="~{/sidebar/sidebar :: sidebarFragment}"></th:block>
+        </div>
     </div>
 
     <div id="main-content" style="flex: 1;">
