--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -14,36 +14,34 @@
             <a class="logo" th:href="@{/main/}"><img class="logo" th:src="@{/images/logo.png}" alt="Logo"></a>
         </div>
 
-        <h1>eco-reading</h1>
+        <div><h1>eco-reading</h1></div>
 
         <div>
             <a class="navbar-brand" th:href="@{/user/mypage/myinfor}">
-                <div id="userPoints"></div>
-                <img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px"></a>
+                <img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px">
+                <div id="totalPointContainer" style="display: inline-block;"></div></a>
             <a class="navbar-brand" th:href="@{/main/}">
                 <img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px"></a>
 
-            <!--로그인 했을 때 -->
-            <div th:if="${#authorization.expression('isAuthenticated()')}" class="dropdown" >
-                <img th:src="@{/images/user.png}" alt="Login" width="30px" height="30px" onclick="toggleDropdown('authenticatedDropdownContent')">
-                <div id="authenticatedDropdownContent" class="dropdownContent">
-                    <a href="/user/mypage/myinfor">mypage</a>
-                    <a href="/user/logout/">logout</a>
-                </div>
-            </div>
-
-            <!-- Spring Security로 인증되지 않은 경우에만 보이는 드롭다운 메뉴 -->
-            <div th:if="${#authorization.expression('not isAuthenticated()')}" class="dropdown" >
-                <img th:src="@{/images/user.png}" alt="Login" width="30px" height="30px" onclick="toggleDropdown('unauthenticatedDropdownContent')">
-                <div id="unauthenticatedDropdownContent" class="dropdownContent">
-                    <a href="/user/login">login</a>
-                </div>
+        <!--로그인 했을 때 -->
+        <div th:if="${#authorization.expression('isAuthenticated()')}" class="dropdown" >
+            <img th:src="@{/images/user.png}" alt="Login" width="30px" height="30px" onclick="toggleDropdown('authenticatedDropdownContent')">
+            <div id="authenticatedDropdownContent" class="dropdownContent">
+                <a href="/user/mypage/myinfor">mypage</a>
+                <a href="/user/logout/">logout</a>
             </div>
         </div>
 
+        <!-- Spring Security로 인증되지 않은 경우에만 보이는 드롭다운 메뉴 -->
+        <div th:if="${#authorization.expression('not isAuthenticated()')}" class="dropdown" >
+            <img th:src="@{/images/user.png}" alt="Login" width="30px" height="30px" onclick="toggleDropdown('unauthenticatedDropdownContent')">
+            <div id="unauthenticatedDropdownContent" class="dropdownContent">
+                <a href="/user/login">login</a>
+            </div>
+        </div>
+        </div>
     </nav>
 </div>
-
 
 
 
