--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -20,8 +20,14 @@
             <a class="navbar-brand" th:href="@{/user/mypage/myinfor}">
                 <div id="userPoints"></div>
                 <img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px"></a>
-            <a class="navbar-brand" th:href="@{/main/}">
-                <img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px"></a>
+
+            <div class="navbar-brand">
+                <img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px" onclick="toggleDropdown('notificationDropdownMenu')">
+                <span id="notificationCount" class="badge badge-danger">0</span>
+                <div id="notificationDropdownMenu" class="dropdownContent">
+                    <!--여기에 알림 내용 넣어야함-->
+                </div>
+            </div>
 
             <!--로그인 했을 때 -->
             <div th:if="${#authorization.expression('isAuthenticated()')}" class="dropdown" >
