--- a/src/main/resources/templates/sidebar/adminSidebar.html
+++ b/src/main/resources/templates/sidebar/adminSidebar.html
@@ -4,10 +4,10 @@
 <div style="padding-top: 20px;">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/admin/">userlist</a>
+                <a class="nav-link active" href="/admin/">User List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/admin/board">board manager</a>
+                <a class="nav-link active" href="/admin/board">Manage Board</a>
             </li>
         </ul>
     </div>
