--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -3,21 +3,21 @@
     <div style="padding-top: 20px;">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/board/new">book donation</a>
+                <a class="nav-link active" href="/board/new">Book Donation</a>
             </li>
             <li class="nav-item" th:onclick="|toggleSubMenu();|">
-                <a class="nav-link">▿ mypage</a>
+                <a class="nav-link">▿ My Page</a>
                 <!-- Wrap the sub-menu items in a container with an id -->
                 <div id="myPageSubMenu" style="display: none;">
                     <ul class="nav flex-column ml-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="/user/mypage/myinfor">myinfo</a>
+                            <a class="nav-link" href="/user/mypage/myinfor">My Info</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/user/mypage/givelist">give</a>
+                            <a class="nav-link" href="/user/mypage/givelist">Give</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/user/mypage/takelist">take</a>
+                            <a class="nav-link" href="/user/mypage/takelist">Take</a>
                         </li>
                     </ul>
                 </div>
