--- a/src/main/resources/templates/content/board/takeBook.html
+++ b/src/main/resources/templates/content/board/takeBook.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layout/defaultLayout}"
+      layout:decorate="~{layout/defaultLayout}"
       layout:fragment="content">
 
 <head>
@@ -99,7 +99,7 @@
     </div>
 </div>
 
-<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
+<footer th:replace="~{footer/footer :: footerFragment}"></footer>
 
 </body>
 </html>
