--- a/src/main/resources/templates/content/board/updateBoardSearchForm.html
+++ b/src/main/resources/templates/content/board/updateBoardSearchForm.html
@@ -12,11 +12,11 @@
 <!--</head>-->
 <!--<body>-->
 <!--&lt;!&ndash; header &ndash;&gt;-->
-<!--<header th:replace="~{/header/header :: headerFragment}"></header>-->
+<!--<header th:replace="~{header/header :: headerFragment}"></header>-->
 <!--<div class="container-fluid">-->
 <!--    <div class="row">-->
 <!--        &lt;!&ndash; Sidebar &ndash;&gt;-->
-<!--        <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>-->
+<!--        <header th:replace="~{sidebar/sidebar :: sidebarFragment}"></header>-->
 
 <!--        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">-->
 <!--            <div class="main-container border rounded p-3 mt-2">-->
@@ -260,7 +260,7 @@
 <!--    </div>-->
 <!--</div>-->
 
-<!--<footer th:replace="~{/footer/footer :: footerFragment}"></footer>-->
+<!--<footer th:replace="~{footer/footer :: footerFragment}"></footer>-->
 <!--<script th:src="@{/js/boardAdd.js}"></script>-->
 <!--</body>-->
 <!--</html>-->
