--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 
 <body class="gradient-custom" style="background-color: #E2ECE2;">
 
-<header class="sticky-top" th:replace="~{/header/header :: headerFragment}"></header>
+<header class="sticky-top" th:replace="~{header/header :: headerFragment}"></header>
 
 
 <div class="container-fluid">
@@ -65,7 +65,7 @@
     </div>
 </div>
 
-<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
+<footer th:replace="~{footer/footer :: footerFragment}"></footer>
 
 <!-- Thymeleaf를 사용하는 경우 아래와 같이 에러 메시지를 표시 -->
 </body>
