--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,7 +11,7 @@
   <script th:src="@{/js/App.js}"></script>
 </head>
 <body class="gradient-custom" style="background-color: #E2ECE2;">
-<header class="sticky-top" th:replace="~{/header/header :: headerFragment}"></header>
+<header class="sticky-top" th:replace="~{header/header :: headerFragment}"></header>
 
 <section class="d-flex vh-100">
   <div class="container-fluid row justify-content-center align-content-center" style="margin-bottom: 50px;">
@@ -114,7 +114,7 @@
     </div>
   </div>
 </section>
-<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
+<footer th:replace="~{footer/footer :: footerFragment}"></footer>
 
 </body>
 </html>
