--- a/src/main/resources/templates/content/admin/main.html
+++ b/src/main/resources/templates/content/admin/main.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layout/defaultLayout}"
+      layout:decorate="~{layout/defaultLayout}"
       layout:fragment="content"
       xmlns="http://www.w3.org/1999/html">
 <head>
