--- a/src/main/resources/templates/content/admin/searchedBoards.html
+++ b/src/main/resources/templates/content/admin/searchedBoards.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layout/defaultLayout}"
+      layout:decorate="~{layout/defaultLayout}"
       layout:fragment="content">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
