--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -5,21 +5,21 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <!--공통 js/css 관리하는 영역-->
-<th:block th:replace="~{/layout/layoutConfig :: configFragment}"></th:block>
+<th:block th:replace="~{layout/layoutConfig :: configFragment}"></th:block>
 
 <body>
 <!--header 영역 참조-->
-<th:block th:replace="~{/header/header :: headerFragment}"></th:block>
+<th:block th:replace="~{header/header :: headerFragment}"></th:block>
 
 <!--main 영역 참조-->
 <div id="content-wrapper" style="display: flex;">
     <div id="sidebar" class="sidebar col-md-3 col-lg-2 d-md-block">
         <!-- Sidebar -->
         <div th:if="${#httpServletRequest.requestURI.startsWith('/admin')}">
-            <th:block th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></th:block>
+            <th:block th:replace="~{sidebar/adminSidebar :: sidebarFragment}"></th:block>
         </div>
         <div th:unless="${#httpServletRequest.requestURI.startsWith('/admin')}">
-            <th:block th:replace="~{/sidebar/sidebar :: sidebarFragment}"></th:block>
+            <th:block th:replace="~{sidebar/sidebar :: sidebarFragment}"></th:block>
         </div>
     </div>
 
@@ -30,7 +30,7 @@
 </div>
 
 <!--footer 영역 참조-->
-<th:block th:replace="~{/footer/footer :: footerFragment}"></th:block>
+<th:block th:replace="~{footer/footer :: footerFragment}"></th:block>
 
 </body>
 </html>
